<resources>
    <string name="app_name">PictureBrowse</string>
    <string name="tv_00">黄山概况</string>
    <string name="tv_01">\t\t黄山是世界文化与自然遗产、世界地质公园，是国家级风景名胜区、全国文明风景旅游区、国家5A级旅游景区，与长江、长城、黄河同为中华壮丽山河和灿烂文化的杰出代表，被世人誉为“人间仙境”、“天下第一奇山”，素以奇松、怪石、云海、温泉、冬雪“五绝”著称于世。境内群峰竞秀，怪石林立，有千米以上高峰88座，“莲花”、“光明顶”、“天都”三大主峰，海拔均逾1800米。明代大旅行家徐霞客曾两次登临黄山，赞叹道：“薄海内外无如徽之黄山，登黄山天下无山，观止矣！”后人据此概括为“五岳归来不看山，黄山归来不看岳”。</string>
    <string name="tv_02">\t\t黄山雄踞于安徽南部黄山市境内，山境南北长约40千米，东西宽约30千米，总面积约1200平方千米。其中，黄山风景区面积160.6平方千米，地跨东经118°01\'—118°17\'，北纬30°01\'—30°18\'，东起黄狮 ，西至小岭脚，北始二龙桥，南达汤口镇，分为温泉、云谷、玉屏、北海、松谷、钓桥、浮溪、洋湖、福固九个管理区。缓冲区面积490.9平方千米，以与景区相邻的五镇一场（黄山区汤口镇、谭家桥镇、三口镇、耿城镇、焦村镇和洋湖林场）的行政边界为界。</string>
    <string name="tv_03">得名由来</string>
    <string name="tv_04">\t\t黄山原名黟山，因峰岩青黑，遥望苍黛而得名。传说轩辕黄帝曾在此采药炼丹，得道成仙。唐玄宗笃信道教，遂于天宝六年（公元747年）诏改黟山为黄山，黄山之名于是一直沿用至今。千余年来，黄山积淀了浓郁的黄帝文化，轩辕峰、炼丹峰、容成峰、浮丘峰、丹井、洗药溪、晒药台等景名都与黄帝有关。</string>
    <string name="tv_05">\t\t黄山集八亿年地质史于一身，融峰林地貌、冰川遗迹于一体，兼有花岗岩造型石、花岗岩洞室、泉潭溪瀑等丰富而典型的地质景观。前山岩体节理稀疏，多球状风化，山体浑厚壮观；后山岩体节理稠密，多柱状风化，山体峻峭，形成了“前山雄伟、后山秀丽”的地貌特征。</string>
</resources>
